--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,32 +2,35 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: .70rem;
+  padding-left: .70rem;
+}
+.hover-underline-red {
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+  cursor: pointer;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.hover-underline-red::before {
+  content: "";
+  position: absolute;
+  bottom: 0px;
+  left: 0;
+  width: 0; /* Start with no width */
+  height: 2px;
+  background-color: red;
+  transition: width 0.3s ease; /* Transition the width */
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.hover-underline-red:hover::before {
+  width: 50%; /* Expand to 50% on hover */
+}
+.nav.active .hover-underline-red::before {
+  width: 50%;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+ 
