--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,5 +32,57 @@
 .nav.active .hover-underline-red::before {
   width: 50%;
 }
+.menu-icon{
+  display: none;
+}
+.menu-close{
+  display: none;
+}
+@media screen and (max-width: 1030px) {
+  .container{
+    margin-left: 10px;
+    margin-right: auto;
+    padding-right: .70rem;
+    padding-left: .70rem;
+  }
+  .menu-icon {
+      display: block;
+  }
+  .menu-items {
+      display: none;
+      flex-direction: column;
+      width: 100%;
+  }
+  .logo.open{
+    display:none;
+  }
+  .navigation.open{
+    background-color: white;
+  }
+  .menu-items.open {
+      display: flex;
+      flex-direction: column;
+      color: black;
+  }
+.items.open{
+      position: relative;
+      left: 50%;
+      top: 25%;
+      display: flex;
+      flex-direction: column;
+      gap: 25px;
+      text-align: center;
+      transition: all 0.3s ease-in;
+}
+.touch{
+  background-color: #001c48;
+}
 
+.menu-close.open{
+  display: block;
+}
+.menu-icon.open{
+  display: none;
+}
+}
  
